--- a/package.json
+++ b/package.json
@@ -44,12 +44,13 @@
     "stylint": "1.5.9"
   },
   "dependencies": {
+    "@material-ui/core": "4",
     "cozy-bar": "7.12.3",
     "cozy-client": "15.3.0",
-    "cozy-ui": "37.8.0",
+    "cozy-scripts": "5.4.4",
+    "cozy-ui": "48.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-router-dom": "4.3.1",
-    "cozy-scripts": "5.4.4"
+    "react-router-dom": "4.3.1"
   }
 }
