--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,16 @@ language: node_js
 matrix:
   fast_finish: true
 node_js:
-- '8'
+- '10'
 branches:
   only:
   - master
 env:
   global:
   # GITHUB_TOKEN for yarn deploy script
-  # to generate yours : travis encrypt GITHUB_TOKEN=<your_GITHUB_TOKEN> -r cozy/cozy-onlyoffice --org
+  # to generate yours : travis encrypt GITHUB_TOKEN=<your_GITHUB_TOKEN> -r cozy/cozy-onlyoffice
   # REGISTRY_TOKEN for yarn cozyPublish script
-  # to generate yours : travis encrypt REGISTRY_TOKEN=<your_REGISTRY_TOKEN> -r cozy/cozy-onlyoffice --org
+  # to generate yours : travis encrypt REGISTRY_TOKEN=<your_REGISTRY_TOKEN> -r cozy/cozy-onlyoffice
   # N.B.: the --org option is needed only for public repositories
 cache:
   yarn: true
