--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@material-ui/core": "4",
     "cozy-bar": "7.16.0",
     "cozy-client": "21.1.1",
+    "cozy-logger": "1.7.0",
     "cozy-scripts": "5.4.4",
     "cozy-ui": "48.0.0",
     "react": "16.13.1",
