--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "onlyoffice",
   "version": "0.1.0",
   "scripts": {
-    "lint": "yarn lint:js && yarn lint:styles",
+    "lint": "yarn lint:js",
     "lint:js": "cs lint '{src,test}/**/*.{js,jsx}'",
-    "lint:styles": "stylint src/styles --config ./.stylintrc",
     "prebuild": "yarn lint",
     "build": "yarn build:browser",
     "build:browser": "cs build --browser",
