--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   },
   "dependencies": {
     "@material-ui/core": "4",
+    "@testing-library/react": "11.2.6",
+    "@testing-library/react-hooks": "5.1.1",
     "cozy-bar": "7.16.0",
     "cozy-client": "21.1.1",
     "cozy-logger": "1.7.0",
